--- a/pc-builder-frontend/product.html
+++ b/pc-builder-frontend/product.html
@@ -34,7 +34,7 @@
         </div>
         <div class="col-md-6">
           <h3 id="pname"></h3>
-          <div class="text-muted mb-2" id="pmeta"></div>
+          <div class="text-secondary mb-2" id="pmeta"></div>
           <h4 class="mb-3">Price: <span id="pprice"></span></h4>
           <p id="pdesc" class="mb-3"></p>
           <div id="pspecs" class="mb-3"></div>
@@ -47,7 +47,7 @@
 
     <script>
       const API_BASE = 'http://localhost:5001';
-      const DEMO_USER_ID = 1;
+      const DEMO_USER_ID = 3;
 
       function currency(val){ return `₹${Math.round(val).toLocaleString('en-IN')}`; }
       function getParam(name){ return new URLSearchParams(location.search).get(name); }
