--- a/pc-builder-frontend/products.html
+++ b/pc-builder-frontend/products.html
@@ -73,7 +73,7 @@
 
     <script>
       const API_BASE = 'http://localhost:5001';
-      const DEMO_USER_ID = 1;
+      const DEMO_USER_ID = 3;
 
       function currency(val) { return `₹${Math.round(val).toLocaleString('en-IN')}`; }
 
@@ -86,7 +86,7 @@
         return `
           <div class="col-sm-6 col-md-4 col-lg-3 mb-3">
             <div class="card bg-dark text-warning h-100">
-              <img src="${img}" class="card-img-top" alt="${p.name}" style="object-fit:cover;height:170px;cursor:pointer;" onclick="openProduct(${p.id})"/>
+              <img src="${img}" class="card-img-top" alt="${p.name}" style="object-fit:contain;height:170px;width:100%;cursor:pointer;" onclick="openProduct(${p.id})"/>
               <div class="card-body d-flex flex-column">
                 <h6 class="card-title mb-1" style="cursor:pointer" onclick="openProduct(${p.id})">${p.name}</h6>
                 <div class="small text-muted mb-2">${p.brand || ''} • ${p.category}</div>
