--- a/pc-builder-frontend/products.html
+++ b/pc-builder-frontend/products.html
@@ -75,7 +75,7 @@
       const API_BASE = 'http://localhost:5001';
       const DEMO_USER_ID = 3;
 
-      function currency(val) { return `₹${Math.round(val).toLocaleString('en-IN')}`; }
+      function currency(val) { return `$${Math.round(val).toLocaleString('en-IN')}`; }
 
       function openProduct(id){
         window.location.href = `product.html?id=${id}`;
