--- a/pc-builder-frontend/services.html
+++ b/pc-builder-frontend/services.html
@@ -101,7 +101,7 @@
       const DEMO_USER_ID = 3;
       let SERVICES_CACHE = [];
 
-      function currency(val){ return `₹${Math.round(val).toLocaleString('en-IN')}`; }
+      function currency(val){ return `$${Math.round(val).toLocaleString('en-IN')}`; }
 
       function serviceCard(s){
         return `
