--- a/pc-builder-frontend/index.html
+++ b/pc-builder-frontend/index.html
@@ -126,7 +126,7 @@
       const API_BASE = 'http://localhost:5001';
       const DEMO_USER_ID = 3;
 
-      function currency(val){ return `₹${Math.round(val).toLocaleString('en-IN')}`; }
+      function currency(val){ return `$${Math.round(val).toLocaleString('en-IN')}`; }
       function openProduct(id){ window.location.href = `product.html?id=${id}`; }
       function card(p){
          const img = p.image_url || 'https://via.placeholder.com/600x400.png?text=Product';
